--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,17 @@
 spring.application.name=spring-boot-chaos-monkey-example
 
 spring.output.ansi.enabled=always
+
+logging.level.root=TRACE
+logging.level.org.apache=INFO
+logging.level.javax.management=INFO
+
+chaos.monkey.enabled=true
+chaos.monkey.watcher.controller=false
+chaos.monkey.watcher.restController=false
+chaos.monkey.watcher.service=false
+chaos.monkey.watcher.repository=true
+management.endpoint.chaosmonkey.enabled=true
+management.endpoint.chaosmonkeyjmx.enabled=false
+# include specific endpoints
+management.endpoints.web.exposure.include=health,info,chaosmonkey
