--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,34 @@
 spring.application.name=spring-boot-chaos-monkey-example
 
 spring.output.ansi.enabled=always
+
+logging.level.root=INFO
+
+chaos.monkey.enabled=true
+chaos.monkey.watcher.restController=true
+chaos.monkey.watcher.service=true
+chaos.monkey.watcher.repository=false
+
+chaos.monkey.assaults.level=5
+chaos.monkey.assaults.deterministic=true
+
+#Latency
+chaos.monkey.assaults.latencyActive=true
+chaos.monkey.assaults.latencyRangeStart=1000
+chaos.monkey.assaults.latencyRangeEnd=3000
+
+#Exceptions
+chaos.monkey.assaults.exceptionsActive=true
+
+#Kill App
+chaos.monkey.assaults.killApplicationActive=false
+
+#Memory
+chaos.monkey.assaults.memoryActive=false
+
+#CPU
+chaos.monkey.assaults.cpuActive=false
+
+management.endpoint.chaosmonkey.enabled=true
+management.endpoint.chaosmonkeyjmx.enabled=false
+management.endpoints.web.exposure.include=health,info,chaosmonkey
